tests/fixtures/errors/inline_numeric_suffix.z
# inline numeric type suffixes are not zerolang syntax; conversions apply
# to a complete literal via the dot form

main: function is {
    x: 65u8
    y: 2.5f32
    print "\{x} \{y}"
}
